# ffi-toolkit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
src/: memory.rs  result.rs  string.rs
