[package]
name = "ffi-toolkit"
version = "0.0.2"
authors = [
    "Emily Toop <etoop@mozilla.com>",
    "Vinicius Morgado <contato.viniciusdonatto@gmail.com>",
]
edition = "2024"

[dependencies]
libc = "0.2.170"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
